[package]
name = "polyjuice"
version = "0.1.0"
authors = ["Xuejie Xiao <xxuejie@gmail.com>"]
edition = "2018"
autobins = false

[[bin]]
name = "polyjuice"
path = "src/main.rs"

[[bin]]
name = "init"
path = "src/init.rs"

[build-dependencies]
includedir_codegen = "0.5.0"
blake2b-rs = "0.1.4"
faster-hex = "0.3"

[dependencies]
bincode = "1.1"
byteorder = "1.3.1"
bytes = { version = "0.4.12", features = ["serde"] }
ckb-core = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.17" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.17" }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.17" }
ckb-occupied-capacity = { git = "https://github.com/nervosnetwork/ckb", branch = "rc/v0.17" }
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli", rev = "6cf87a7173194825a64e6a2d779d07dc754de13e" }
ctrlc = { version = "3.1", features = ["termination"] }
env_logger = "0.6.2"
faster-hex = "0.3.1"
includedir = "0.5.0"
jsonrpc-client-core = "0.5.0"
jsonrpc-core = "10.1"
jsonrpc-derive = "10.1"
jsonrpc-http-server = { git = "https://github.com/nervosnetwork/jsonrpc", rev = "7c101f83a8fe34369c1b7a0e9b6721fcb0f91ee0" }
jsonrpc-server-utils = "10.1"
lazy_static = "1.3"
lmdb-zero = "0.4.4"
log = "0.4.0"
numext-fixed-hash = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
numext-fixed-uint = { version = "0.1", features = ["support_rand", "support_heapsize", "support_serde"] }
phf = "0.7.21"
rlp = "0.4.2"
rocksdb = "0.12.3"
secp256k1 = { version = "0.12.2" }
serde = "1.0"
serde_derive = "1.0"
tiny-keccak = "1.4"

ethereum-types = "0.6.0"
evm = { path = "deps/parity/ethcore/evm" }
vm = { path = "deps/parity/ethcore/vm" }
